refact-created  CurrencyService to deal with conversion logic and separeted CurrencyConverter to deal with user interaction